--- a/index.html
+++ b/index.html
@@ -70,12 +70,25 @@
       margin-top: 1rem;
       display: inline-block;
     }
+    section#privacy {
+      padding: 4rem 2rem;
+      background: white;
+      text-align: left;
+    }
+    section#privacy h2 {
+      color: #003366;
+    }
+    hr {
+      border: none;
+      border-top: 1px solid #ccc;
+      margin: 4rem 0;
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>Pilot's FlightMate</h1>
-    <a href="#" class="btn">Coming Soon</a>
+    <a href="#privacy" class="btn">Privacy Policy</a>
   </header>
 
   <section class="hero">
@@ -97,6 +110,25 @@
       <h3>Download Roster</h3>
       <p>Export your roster directly to your Apple Calendar for seamless sharing.</p>
     </div>
+  </section>
+
+  <hr>
+
+  <section id="privacy">
+    <h2>Privacy Policy</h2>
+    <p><strong>Effective date:</strong> April 26, 2025</p>
+    <p><strong>Pilot's FlightMate</strong> does not collect, store, or share any personal information. 
+    The app operates entirely on your device and does not require user registration or account creation.</p>
+    <p><strong>Data Collection:</strong>  
+    We do not collect or transmit any personal data. Downloaded roster information and any calculations remain on your device.</p>
+    <p><strong>Third-Party Services:</strong>  
+    This app does not use analytics, advertising, or tracking services.</p>
+    <p><strong>Data Security:</strong>  
+    All data stays locally on your device. No information is transmitted externally.</p>
+    <p><strong>Contact:</strong>  
+    If you have questions about this privacy policy, you can email us at 
+    <a href="mailto:support@flightm8.app" style="color: #007aff;">support@flightm8.app</a>.
+    </p>
   </section>
 
   <footer>
