--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       padding: 0;
       background: #f7faff;
       color: #1a1a1a;
-      box-sizing: border-box;
     }
     header {
       background: linear-gradient(135deg, #003366, #005f8b);
@@ -20,31 +19,9 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      flex-wrap: wrap;
-      border-bottom: 1px solid #ccc;
     }
     header h1 {
       font-size: 1.5rem;
-      margin: 0;
-    }
-    .appstore-badge {
-      margin-top: 1rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      animation: fadeIn 1s ease-in-out;
-    }
-    .appstore-badge img {
-      height: 50px;
-      transition: transform 0.3s ease;
-    }
-    .appstore-badge img:hover {
-      transform: scale(1.05);
-    }
-    .appstore-badge small {
-      color: #aad4ff;
-      margin-top: 0.5rem;
-      font-size: 0.9rem;
     }
     .hero {
       display: flex;
@@ -73,11 +50,6 @@
       border-radius: 8px;
       padding: 1.5rem;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-      transition: transform 0.3s ease;
-    }
-    .feature:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
     .feature h3 {
       margin-top: 0;
@@ -109,6 +81,19 @@
     .btn:hover {
       background-color: #005f8b;
     }
+    section#privacy {
+      padding: 4rem 2rem;
+      background: white;
+      text-align: left;
+    }
+    section#privacy h2 {
+      color: #003366;
+    }
+    hr {
+      border: none;
+      border-top: 1px solid #ccc;
+      margin: 4rem 0;
+    }
     @keyframes bounce {
       0%, 20%, 50%, 80%, 100% {
         transform: translateY(0);
@@ -119,44 +104,6 @@
       60% {
         transform: translateY(-5px);
       }
-    }
-    @keyframes fadeIn {
-      0% { opacity: 0; }
-      100% { opacity: 1; }
-    }
-    /* Modal Styles */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0, 0, 0, 0.4);
-      padding-top: 60px;
-    }
-    .modal-content {
-      background-color: #fefefe;
-      margin: 5% auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 80%;
-      max-width: 600px;
-      border-radius: 10px;
-    }
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-    }
-    .close:hover,
-    .close:focus {
-      color: black;
-      text-decoration: none;
-      cursor: pointer;
     }
   </style>
 </head>
@@ -192,45 +139,28 @@
     </div>
   </section>
 
+  <hr>
+
+  <section id="privacy">
+    <h2>Privacy Policy</h2>
+    <p><strong>Effective date:</strong> April 26, 2025</p>
+    <p><strong>Pilot's FlightMate</strong> does not collect, store, or share any personal information. 
+    The app operates entirely on your device and does not require user registration or account creation.</p>
+    <p><strong>Data Collection:</strong>  
+    We do not collect or transmit any personal data. Downloaded roster information and any calculations remain on your device.</p>
+    <p><strong>Third-Party Services:</strong>  
+    This app does not use analytics, advertising, or tracking services.</p>
+    <p><strong>Data Security:</strong>  
+    All data stays locally on your device. No information is transmitted externally.</p>
+    <p><strong>Contact:</strong>  
+    If you have questions about this privacy policy, you can email us at 
+    <a href="mailto:support@flightm8.app" style="color: #007aff;">support@flightm8.app</a>.
+    </p>
+  </section>
+
   <footer>
-    <p>Contact: <a href="mailto:support@flightm8.app">support@flightm8.app</a></p>
+    <p>Contact: <a href="mailto:support@flightm8.app" style="color: #aad4ff">support@flightm8.app</a></p>
     <p>&copy; 2025 Pilot's FlightMate</p>
-    <p><a href="#" id="privacyLink">Privacy Policy</a></p>
   </footer>
-
-  <!-- Modal -->
-  <div id="privacyModal" class="modal">
-    <div class="modal-content">
-      <span class="close" id="closeModal">&times;</span>
-      <h1>Privacy Policy</h1>
-      <p>Effective Date: [Insert Date]</p>
-      <p>Your privacy is important to us. This Privacy Policy outlines the types of personal information we collect and how it is used, shared, and protected when you use the Pilot's FlightMate app.</p>
-      <!-- Add your full privacy policy content here -->
-    </div>
-  </div>
-
-  <script>
-    // Get modal and elements
-    var modal = document.getElementById("privacyModal");
-    var privacyLink = document.getElementById("privacyLink");
-    var closeModal = document.getElementById("closeModal");
-
-    // Show the modal when Privacy Policy link is clicked
-    privacyLink.onclick = function() {
-      modal.style.display = "block";
-    }
-
-    // Close the modal when the close button is clicked
-    closeModal.onclick = function() {
-      modal.style.display = "none";
-    }
-
-    // Close the modal if the user clicks anywhere outside of the modal content
-    window.onclick = function(event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    }
-  </script>
 </body>
 </html>
