--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     }
     section#privacy {
       padding: 4rem 2rem;
-      background: white;
+      background: #f2f7fd;
       text-align: left;
     }
     section#privacy h2 {
@@ -114,7 +114,7 @@
       <a href="https://apps.apple.com/app/id6739976699" target="_blank" rel="noopener">
         <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83" alt="Download on the App Store">
       </a>
-      <small>Available for iPhone and iPad • Requires iOS 17 or later</small>
+      <p>Available for iPhone and iPad • Requires iOS 17 or later</p>
     </div>
   </header>
 
