--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@
       background: linear-gradient(135deg, #003366, #005f8b);
       color: white;
       padding: 1.5rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      text-align: center;
     }
     header h1 {
-      font-size: 1.5rem;
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+    }
+    .appstore-badge img {
+      max-width: 200px;
+      height: auto;
+    }
+    .appstore-badge p {
+      margin-top: 0.5rem;
+      font-size: 0.9rem;
     }
     .hero {
       display: flex;
@@ -83,7 +90,7 @@
     }
     section#privacy {
       padding: 4rem 2rem;
-      background: #f2f7fd;
+      background: #e6f0ff; /* Updated to match Features */
       text-align: left;
     }
     section#privacy h2 {
@@ -154,12 +161,12 @@
     All data stays locally on your device. No information is transmitted externally.</p>
     <p><strong>Contact:</strong>  
     If you have questions about this privacy policy, you can email us at 
-    <a href="mailto:support@flightm8.app" style="color: #007aff;">support@flightm8.app</a>.
+    <a href="mailto:support@flightm8.app" style="color: #007aff;">support(at)flightm8(dot)app</a>.
     </p>
   </section>
 
   <footer>
-    <p>Contact: <a href="mailto:support@flightm8.app" style="color: #aad4ff">support@flightm8.app</a></p>
+    <p>Contact: <a href="mailto:support@flightm8.app" style="color: #aad4ff">support(at)flightm8(dot)app</a></p>
     <p>&copy; 2025 Pilot's FlightMate</p>
   </footer>
 </body>
