--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
     All data stays locally on your device. No information is transmitted externally.</p>
     <p><strong>Contact:</strong>  
     If you have questions about this privacy policy, you can email us at 
-    <a href="mailto:support@flightm8.app" style="color: #007aff;">support(at)flightm8(dot)app</a>.
+    <a href="mailto:support@flightm8.app" style="color: #007aff;">support@flightm8.app</a>.
     </p>
   </section>
 
   <footer>
-    <p>Contact: <a href="mailto:support@flightm8.app" style="color: #aad4ff">support(at)flightm8(dot)app</a></p>
+    <p>Contact: <a href="mailto:support@flightm8.app" style="color: #aad4ff">support@flightm8.app</a></p>
     <p>&copy; 2025 Pilot's FlightMate</p>
   </footer>
 </body>
