--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
       max-width: 300px;
       margin-top: 2rem;
       animation: bounce 2s infinite;
+      border-radius: 25%; /* NEW: Makes the edges rounded like an app icon */
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* (optional) slight shadow for a floating effect */
     }
     .features {
       display: flex;
