--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
       background: linear-gradient(135deg, #ffffff, #f2f7fd);
     }
     .hero img {
-      max-width: 300px;
+      width: 300px;
+      height: 300px;
       margin-top: 2rem;
       animation: bounce 2s infinite;
-      border-radius: 25%; /* NEW: Makes the edges rounded like an app icon */
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* (optional) slight shadow for a floating effect */
+      border-radius: 20%; /* 🛩 More accurate to iOS "squircle" rounding */
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+      object-fit: cover;
     }
     .features {
       display: flex;
