--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       text-align: center;
     }
     header h1 {
-      font-size: 1.5rem;
+      font-size: 2.5rem;
       margin: 0;
     }
     header .appstore-badge {
@@ -139,8 +139,9 @@
   </header>
 
   <section class="hero">
-    <h2>Your personal flight assistant</h2>
+    <h2>Flight tools made simple for pilots</h2>
     <p>An app for pilots to check fuel, calculate duty and rest times, and download their roster.</p>
+  <p><strong>Completely free • No ads • All features included</strong></p>
     <img src="icon.jpg" alt="App Icon" />
   </section>
 
