--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     }
     header h1 {
       font-size: 2.5rem;
@@ -51,6 +52,7 @@
       text-align: center;
       padding: 4rem 2rem;
       background: linear-gradient(135deg, #ffffff, #f2f7fd);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     }
     .hero img {
       width: 300px;
@@ -69,6 +71,7 @@
       margin-top: 1rem;
       font-weight: 600;
       display: inline-block;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
     }
     @keyframes float {
       0% { transform: translatey(0px); }
@@ -88,8 +91,13 @@
       background: white;
       border-radius: 8px;
       padding: 1.5rem;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
       text-align: center;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .feature:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
     }
     .feature h3 {
       margin-top: 0;
@@ -103,6 +111,7 @@
       margin-top: 3rem;
       border-top: 1px solid #ccc;
       font-size: 0.9rem;
+      box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.15);
     }
     footer a {
       color: #aad4ff;
@@ -117,6 +126,7 @@
       padding: 4rem 2rem;
       background: #e6f0ff;
       text-align: left;
+      box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.05);
     }
     section#privacy h2 {
       color: #003366;
