--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pilot's FlightMate</title>
+  <title>Aircrew FlightMate</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -136,7 +136,7 @@
 <body>
   <header>
     <div>
-      <h1>Pilot's FlightMate</h1>
+      <h1>Aircrew FlightMate</h1>
       <p>Smarter tools. Safer flights. Free forever.</p>
     </div>
     <div class="appstore-badge">
@@ -149,7 +149,7 @@
 
   <section class="hero">
     <h2>Spend less time calculating, more time flying</h2>
-    <p>FlightMate puts essential flight tools at your fingertips — built by pilots, for pilots.</p>
+    <p>FlightMate puts essential flight tools at your fingertips — built by aircrew, for aircrew.</p>
     <div class="free-badge">Completely free • No ads • All features included</div>
     <img src="icon.jpg" alt="App Icon" />
   </section>
@@ -174,7 +174,7 @@
   <section id="privacy">
     <h2>Privacy Policy</h2>
     <p><strong>Effective date:</strong> April 26, 2025</p>
-    <p><strong>Pilot's FlightMate</strong> does not collect, store, or share any personal information. The app operates entirely on your device and does not require user registration or account creation.</p>
+    <p><strong>Aircrew FlightMate</strong> does not collect, store, or share any personal information. The app operates entirely on your device and does not require user registration or account creation.</p>
     <p><strong>Data Collection:</strong> We do not collect or transmit any personal data. Downloaded roster information and any calculations remain on your device.</p>
     <p><strong>Third-Party Services:</strong> This app does not use analytics, advertising, or tracking services.</p>
     <p><strong>Data Security:</strong> All data stays locally on your device. No information is transmitted externally.</p>
@@ -183,7 +183,7 @@
 
   <footer>
     <p>Contact: <a href="mailto:support@flightm8.app">support@flightm8.app</a></p>
-    <p>&copy; 2025 Pilot's FlightMate</p>
+    <p>&copy; 2025 Aircrew FlightMate</p>
     <p style="margin-top: 1rem;">Made with ❤️ by a fellow pilot</p>
   </footer>
 </body>
